# file-server

./: Cargo.toml  README.md
scraps/: manager.rs
src/: connection.rs  core.rs  fops.rs  main.rs  manager.rs  payload.rs  server.rs
src/example/: client.rs
